:bug: Add width to button to prevent stretch in grid

--- a/src/components/Buttons/Button.module.css
+++ b/src/components/Buttons/Button.module.css
@@ -24,4 +24,5 @@
   composes: normal;
   padding: 0.7rem 2.2rem;
   background-color: rgb(0 0 0 / 0%);
+  width: max-content;
 }
